# cim-domain-organization

./: .gitignore  CHANGELOG.md  CONVERSION_ASSESSMENT.md  CONVERSION_PROGRESS.md  Cargo.toml  DOMAIN_BOUNDARY_VIOLATIONS.md  DOMAIN_REFACTORING_SUMMARY.md  IMPLEMENTATION_STATUS.md  README.md  flake.nix  implementation-summary.md  readme.md
.claude/: architecture-decisions.md  module-context.md  nats-refactoring-plan.md  troubleshooting.md
.claude/architecture/: module-dependencies.md
deployment/: CONTAINER_DEPLOYMENT.md
deployment/nix/: container.nix
doc/: api.md  user-stories.md
docs/: cross-reference.md
docs/algebra/: README.md
docs/api/: README.md
examples/: organization_structure.rs
src/: aggregate.rs  commands.rs  entity.rs  errors.rs  events.rs  lib.rs  nats.rs  organization.rs
src/adapters/: mod.rs  nats_event_publisher.rs
src/aggregate/: mod.rs
src/commands/: component_commands.rs  mod.rs
src/components/: data.rs  mod.rs
src/cross_domain/: location_integration.rs  mod.rs  person_integration.rs
src/events/: component_events.rs  mod.rs
src/handlers/: command_handler.rs  component_handler.rs  mod.rs  query_handler.rs
src/infrastructure/: component_store.rs  event_store.rs  mod.rs  nats_integration.rs  persistence.rs
src/nats/: subjects.rs
src/ports/: event_publisher.rs  mod.rs
src/projections/: mod.rs  views.rs
src/queries/: mod.rs
src/value_objects/: address.rs  mod.rs  organization_role.rs  organization_status.rs  organization_type.rs  phone_number.rs  role_level.rs  size_category.rs
tests/: organization_tests.rs
