[package]
name = "cim-domain-organization"
version = "0.3.0"
edition = "2021"

[dependencies]
# Core dependencies
cim-domain = { path = "../cim-domain" }
cim-subject = { path = "../cim-domain/crates/cim-subject" }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1.42", features = ["sync", "rt"] }
async-nats = "0.38"
futures = "0.3"
tracing = "0.1"

# Bevy dependencies (optional)
bevy_ecs = { version = "0.16", optional = true }

[features]
default = []
bevy = ["bevy_ecs"]

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
