[package]
name = "cim-domain-organization"
version = "0.3.0"
edition = "2021"

[dependencies]
# Core dependencies
cim-domain = { git = "https://github.com/TheCowboyAI/cim-domain.git", branch = "main" }
cim-subject = { git = "https://github.com/thecowboyai/cim-subject.git", branch = "main" }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1.42", features = ["sync", "rt"] }
async-nats = "0.38"
futures = "0.3"
tracing = "0.1"

[features]
default = []

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
